--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ aiosqlite==0.18.0
 python-dotenv==1.0.0
 python-multipart==0.0.6
 requests==2.31.0
-yt-dlp==2025.10.01
-python-telegram-bot==20.9  # optional if you later want helper components
-telethon==1.29.2  # optional for large uploads
-uvloop==0.17.0
+yt-dlp==2025.02.03         # latest valid version
+python-telegram-bot==21.6  # valid, optional
+telethon==1.34.0           # stable & supports 4GB uploads
+uvloop==0.19.0             # Python 3.11 compatible
