--- a/requirements.txt
+++ b/requirements.txt
@@ -14,19 +14,18 @@ python-dotenv==1.0.0
 python-multipart==0.0.6
 
 # Media tools
-pillow==10.2.0          # thumbnails, image processing
-ffmpy==0.3.1            # FFmpeg wrapper
-mutagen==1.47.0         # audio tags editor
+pillow==10.2.0
+ffmpy==0.3.1
+mutagen==1.47.0
 
 # Downloaders
-yt-dlp==2024.07.07      # latest valid version
+yt-dlp==2024.07.07
 
-# Archives
+# Archive tools
 py7zr==0.21.0
-python-archive==0.2.1
 rarfile==4.1
 zipfile36==0.1.3
 
 # Helper / Utilities
-tqdm==4.66.1            # progress bar
-humanize==4.9.0         # readable sizes/times
+tqdm==4.66.1
+humanize==4.9.0
